# inoxset

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE.md  README.md
benches/: benchmarks.rs  comparison.rs
docs/superpowers/plans/: 2026-04-04-dictionary-encoding.md
src/: bloom.rs  builder.rs  catalog.rs  dict.rs  dictionary.rs  error.rs  inverted.rs  lib.rs  mempart.rs  merge.rs  metrics.rs  part_store.rs  period.rs  read_index.rs  rollup.rs  types.rs
tests/: integration.rs  property.rs
