[package]
name = "inoxset"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Embeddable set engine — power segmentation, analytics, and AI recall in real time"
license = "MIT"
rust-version = "1.75"

[dependencies]
roaring = "0.10"
heed = "0.22.0"
memmap2 = "0.9"
thiserror = "1"
log = "0.4"
arc-swap = "1.9.1"
rustc-hash = "2.1.1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"
redis = "0.32.2"
dashmap = "6.1.0"
heed = "0.22.0"
redb = "~1.4"

[profile.release]
debug = true

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "comparison"
harness = false
